--- a/fe/pugpunshop/src/pages/users/theme/header/style.scss
+++ b/fe/pugpunshop/src/pages/users/theme/header/style.scss
@@ -5,9 +5,40 @@
   background: #f5f5f5;
 }
 
+.header_top_left {
+  ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    padding: 10px 0 13px;
+    column-gap: 10px;
+
+    li {
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      column-gap: 2px;
+    }
+    li:first-child {
+      position: relative;
+
+      &:after {
+        position: absolute;
+        right: -6px;
+        top: 1px;
+        height: 20px;
+        width: 1px;
+        background: #000000;
+        opacity: 0.1;
+        content: "";
+      }
+    }
+  }
+}
+
 .header_top_right {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   padding: 10px 0 13px;
 
